--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,9 @@
-<p>opa</p>
+<% if @events.any? %>
+  <% @events.each do |event| %>
+    <%= cl_image_tag(event.photo.key, crop: :fill) %>
+    <h2><%= event.title %></h2>
+  <% end %>
+
+<% else %>
+  <p>Sorry, no places found!</p>
+<% end %>
