--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :description, label: false, as: :text, placeholder: 'Description', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :price, label: false, as: :float, placeholder: 'Price', input_html: { class: 'form-control' } %>
+      <%= f.input :date, label: false, as: :text, placeholder: 'Date', input_html: { class: 'form-control datepicker' } %>
     </div>
     <% if @event.new_record? %>
       <div class="form-group">
@@ -18,7 +18,7 @@
       </div>
     <% end %>
     <div class="form-group text-center">
-      <%= f.button :submit, @event.new_record? ? "Create Place" : "Confirm", class: 'btn btn-primary' %>
+      <%= f.button :submit, @event.new_record? ? "Create Event" : "Confirm", class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
