--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,8 @@
 <h1><%= @event.title %></h1>
-<p><%= @event.date %></p>
-<p><%= @event.location %></p>
-<p><%= @event.description %></p>
+<p>Date: <%= @event.date %></p>
+<p>Location: <%= @event.location %></p>
+<p>Description: <%= @event.description %></p>
+<p>Host: <%= @event.user.name %> </p>
+<%= cl_image_tag(@event.photo.key, crop: :fill) %>
+
+<%= link_to 'Back to events', events_path %>
