--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,16 +1,18 @@
 <% if @events.any? %>
-  <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 277, "gutter": 30 }'>
-    <% @events.each do |event| %>
-      <div class="grid-item">
-        <%= cl_image_tag(event.photo.key, crop: :fill) %>
-        <div class="card-content">
-          <h2><%= event.title %></h2>
-          <p><%= event.location %></p>
-          <p><strong><%= event.date %></strong></p>
+  <div class="scrollable-container">
+    <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 277, "gutter": 30 }'>
+      <% @events.each do |event| %>
+        <div class="grid-item">
+          <%= cl_image_tag(event.photo.key, crop: :fill) %>
+          <div class="card-content">
+            <h2><%= event.title %></h2>
+            <p><%= event.location %></p>
+            <p><strong><%= event.date %></strong></p>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 <% else %>
-  <p>Sorry, no places found!</p>
+  <p>Sorry, no events found!</p>
 <% end %>
