--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,11 +1,19 @@
-<h1>My tickets</h1>
+<h1 class='mb-3'>My tickets</h1>
 
-<% if @tickets.any? %>
-  <% @tickets.each do |ticket| %>
-    <%= cl_image_tag(ticket.event.photo.key, crop: :fill) %>
-    <h2><%= ticket.event.title %></h2>
+<div class="flexbox">
+  <% if @tickets.any? %>
+    <% @tickets.each do |ticket| %>
+      <div class="card-trip">
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= ticket.event.title %></h2>
+            <p><%= ticket.event.date %></p>
+            <p><%= ticket.event.location %></p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <% else %>
+    <p>No tickets found.</p>
   <% end %>
-
-<% else %>
-  <p>Sorry, no tickets found!</p>
-<% end %>
+</div>
