--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,27 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.search {
+  width: 600px;
+  padding: 10px;
+  border-radius: 10px 0px 0px 10px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.search:hover {
+  box-shadow: #373A40;
+}
+
+.search-btn{
+  width: 100px;
+  border-radius: 0px 10px 10px 0px;
+  background: rgb(0, 0, 0);
+  border: #000000;
+  color: #ffffff;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin: 0;
+  text-align: center;
+}
