--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,10 +12,18 @@
   font-size: 12px;
   opacity: 0.7;
   margin: 8px 0;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 
 .card-content strong {
   font-size: 14px;
   display: block;
   margin-top: 10px;
+}
+
+.event-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
