--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,9 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
 
-    <%= link_to events_path, class: "navbar-brand" do %>
-       <%# image_tag "adicionar logo" %>
+  <%= link_to events_path, class: "navbar-brand" do %>
+      <%# Imagem meramente ilustrativa. Trocar por logo depois %>
+      <%= image_tag "https://static.vecteezy.com/system/resources/thumbnails/015/117/358/small_2x/ticket-icon-in-grey-colors-voucher-signs-illustration-png.png" %>
     <% end %>
 
 
@@ -39,7 +40,7 @@
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-
+              <%= link_to "My events", my_events_path, class: "dropdown-item" %>
               <%= link_to "Edit profile", edit_user_registration_path, class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
