Configuração dos My Events e ajuste dos botões, à exceção de 'edit' e 'remove'

--- a/app/views/events/my_events.html.erb
+++ b/app/views/events/my_events.html.erb
@@ -30,5 +30,5 @@
 <% end %>
 
 <div class="text-center mt-4">
-  <%= link_to 'All events', events_path, class: 'btn btn-outline-primary rounded' %>
+  <%= link_to 'All events', events_path, class: 'my_events-btn btn-outline-primary rounded' %>
 </div>
