--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <% if @events.any? %>
-  <div class="scrollable-container">
+  <div class="scrollable-container mt-3">
     <div class="grid" data-controller='masonry'>
       <% @events.each do |event| %>
         <div class="grid-item d-none" data-masonry-target='item'>
