--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,7 +10,7 @@
       <%= f.input :description, label: false, as: :text, placeholder: 'Description', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :date, label: false, as: :text, placeholder: 'Date', input_html: { class: 'form-control datepicker' } %>
+      <%= f.input :date, label: false, as: :string, placeholder: 'Date', input_html: {data: {controller: "flatpickr"}}%>
     </div>
     <% if @event.new_record? %>
       <div class="form-group">
