--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
   <div class="row mt-3">
     <div class='col-sm-12 col-lg-7'>
-      <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url('<%= cl_image_path @event.photo.key, height: 300, crop: :fill %>')">
-      </div>
+      <% if @event.photo.present? %>
+        <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url('<%= cl_image_path @event.photo.key, height: 300, crop: :fill %>')">
+        </div>
+      <% end %>
+
       <div class="d-flex my-3 justify-content-between">
         <%= link_to 'Vender', new_event_ticket_path(@event), class: 'btn btn-primary rounded me-1', style: "width:100%" %>
         <%= link_to 'Comprar', events_path, class: 'btn btn-primary rounded ms-1', style: "width:100%" %>
