--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -7,6 +7,6 @@
   </div>
 
   <div class="text-center mt-4">
-    <%= link_to 'Back', tickets_path, class: 'btn btn-secondary' %>
+    <%= link_to 'Back', events_path, class: 'btn btn-secondary' %>
   </div>
 </div>
