--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,9 +3,13 @@
     <div class='col-sm-12 col-lg-7'>
       <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url('<%= cl_image_path @event.photo.key, height: 300, crop: :fill %>')">
       </div>
-      <div class="d-flex my-3 justify-content-between">
-        <%= link_to 'Vender', new_event_ticket_path(@event), class: 'btn btn-primary rounded me-1', style: "width:100%" %>
-        <%= link_to 'Comprar', events_path, class: 'btn btn-primary rounded ms-1', style: "width:100%" %>
+      <div class="d-flex my-3 justify-content-around">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ticketModal">
+          Sell
+        </button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ticketModal">
+          Buy
+        </button>
       </div>
 
       <div class='d-flex mb-3 justify-content-between mt-3'>
@@ -33,6 +37,19 @@
         data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
     </div>
-
   </div>
+  <div class="modal fade" id="ticketModal" tabindex="-1" aria-labelledby="ticketModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ticketModalLabel">Select the quantity and type</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <%= render 'tickets/form', ticket: @ticket %>
+      </div>
+    </div>
+  </div>
+</div>
+
 </div>
