--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,9 +1,13 @@
-<div class="bg-white rounded p-4 shadow-sm">
-  <%= simple_form_for @ticket do |f| %>
-    <div class="form-group">
-      <%= f.input :quantity, label: false, placeholder: 'Quantity', input_html: { class: 'form-control' } %>
-    </div>
-    <div class="form-group">
-      <%= f.input :ticket_type, label: false, placeholder: 'Ticket type', input_html: { class: 'form-control' } %>
-    </div>
-</div>
+<%= form_for ticket do |form| %>
+  <div class="mb-3">
+    <%= form.label :quantity, class: "form-label" %>
+    <%= form.number_field :quantity, class: "form-control" %>
+  </div>
+  <div class="mb-3">
+    <%= form.label :ticket_type, class: "form-label" %>
+    <%= form.select :ticket_type, options_for_select([['Inteira', 'inteira'], ['Meia', 'meia']]), { prompt: 'Select Ticket Type' }, class: 'form-control' %>
+  </div>
+  <div class="mb-3">
+    <%= form.submit "Confirm", class: "btn btn-primary" %>
+  </div>
+<% end %>
