Criação do back de Users e My profile; tickets@destroy

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -10,15 +10,13 @@
       <%= f.input :description, label: false, as: :text, placeholder: 'Description', input_html: { class: 'form-control' } %>
     </div>
     <div class="form-group">
-      <%= f.input :date, label: false, as: :string, placeholder: 'Date', input_html: {data: {controller: "flatpickr"}}%>
+      <%= f.input :date, label: false, as: :string, placeholder: 'Date', input_html: { data: { controller: "flatpickr" } } %>
     </div>
-    <% if @event.new_record? %>
-      <div class="form-group">
-        <%= f.input :photo, label: false, as: :file, input_html: { class: 'form-control-file' } %>
-      </div>
-    <% end %>
+    <div class="form-group">
+      <%= f.input :photo, label: false, as: :file, input_html: { class: 'form-control-file' } %>
+    </div>
     <div class="form-group text-center">
-      <%= f.button :submit, @event.new_record? ? "Create Event" : "Confirm", class: 'btn btn-primary' %>
+      <%= f.button :submit, "Update Event", class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
