--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -17,3 +17,7 @@
     <p>No tickets found.</p>
   <% end %>
 </div>
+
+<div class="text-center mt-4">
+  <%= link_to 'All events', events_path, class: 'btn btn-outline-primary rounded' %>
+</div>
