--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,8 +1,7 @@
 <div class="bg-white rounded p-4 shadow-sm">
-  <%= simple_form_for @ticket do |f| %>
-    <div class="form-group">
-      <%= f.input :ticket_type, label: false, placeholder: 'Ticket type', input_html: { class: 'form-control' } %>
-      <%= f.submit "Sell tickets", class: 'btn btn-primary' %>
-    </div>
+  <%= simple_form_for([@event, @ticket]) do |f| %>
+    <%= f.input :ticket_type, label: false, placeholder: 'Ticket type', input_html: { class: "form-control" } %>
+
+    <%= f.button :submit, "Sell Ticket", class: "btn btn-primary" %>
   <% end %>
 </div>
