--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,7 +1,6 @@
 <div class="bg-white rounded p-4 shadow-sm">
   <%= simple_form_for([@event, @ticket]) do |f| %>
-    <%= f.input :ticket_type, label: false, placeholder: 'Ticket type', input_html: { class: "form-control" } %>
-
-    <%= f.button :submit, "Sell Ticket", class: "btn btn-primary" %>
+    <%= f.input :ticket_type, collection: [['Inteira', 'inteira'], ['Meia', 'meia']], label: "Ticket Type", input_html: { class: "form-control" }, include_blank: false %>
+    <%= f.button :submit, "Sell Tickets", class: "btn btn-primary" %>
   <% end %>
 </div>
