--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -9,6 +9,7 @@
             <h2><%= ticket.event.title %></h2>
             <p><%= ticket.event.date %></p>
             <p><%= ticket.event.location %></p>
+            <p><%= ticket.ticket_type %> - <%= humanized_money_with_symbol(ticket.price) %></p>
           </div>
         </div>
       </div>
