--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,12 +4,18 @@
   <ul>
     <% @orders.each do |order| %>
       <li>
-        Ticket: <%= order.ticket.ticket_type %> - Quantity: <%= order.quantity %>
+        Ticket: <%= order.ticket.ticket_type %> (<%= number_to_currency(order.ticket.price_cents / 100.0) %>) - Quantity: <%= order.quantity %>
       </li>
     <% end %>
   </ul>
 
-   <%= link_to 'Checkout', checkout_path, data: { turbo_method: :patch, turbo_confirm: 'Are you sure?' }, class: 'btn btn-primary' %>
+  <h2>Total Price: <%= number_to_currency(@total_price) %></h2>
+
+  <%= form_with url: create_checkout_session_path, data: { turbo_method: :post, turbo: false }, local: true do %>
+    <%= submit_tag 'Checkout', class: 'btn btn-primary' %>
+  <% end %>
+
+
 <% else %>
   <p>No orders to process.</p>
 <% end %>
