--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,6 +5,7 @@
     <% @orders.each do |order| %>
       <li>
         Ticket: <%= order.ticket.ticket_type %> - Quantity: <%= order.quantity %>
+        <%= link_to 'Remove', order_path(order), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
       </li>
     <% end %>
   </ul>
