Adjusted event show buttons

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,7 +8,7 @@
 
       <div class="d-flex my-3 justify-content-between">
 
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#sellTicketModal">
+        <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
           Sell
         </button>
         <%= link_to 'Comprar', new_event_order_path(@event), class: 'btn btn-primary rounded ms-1', style: "width:100%" %>
