--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,11 +7,12 @@
       <% end %>
 
       <div class="d-flex my-3 justify-content-between">
-
         <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
           Sell
         </button>
-        <%= link_to 'Comprar', new_event_order_path(@event), class: 'btn btn-primary rounded ms-1', style: "width:100%" %>
+        <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%'>
+          Buy
+        </button>
       </div>
 
       <div class='d-flex mb-3 justify-content-between mt-3'>
@@ -41,17 +42,34 @@
     </div>
   </div>
 
+  <!-- Sell Modal -->
   <div class="modal fade" id="sellTicketModal" tabindex="-1" role="dialog" aria-labelledby="sellTicketModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="sellTicketModalLabel">Sell Ticket</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <%= render 'tickets/form', ticket: @ticket, event: @event %>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="sellTicketModalLabel">Sell Ticket</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%= render 'tickets/form', ticket: @ticket, event: @event %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+  <!-- Buy Modal -->
+  <div class="modal fade" id="buyTicketModal" tabindex="-1" role="dialog" aria-labelledby="buyTicketModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="buyTicketModalLabel">Sell Ticket</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <%= render 'orders/form', ticket: @ticket, event: @event %>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
