--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,22 @@
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: #333;
+  color: #fff;
+  z-index: 1000;
+}
+
+body {
+  margin-top: 100px;
+}
+
+.container {
+  margin-top: 100px;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
