--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,7 +7,7 @@
       <% end %>
 
       <div class="d-flex my-3 justify-content-between">
-        <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
+        <button type="button" class="btn btn-primary rounded me-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
           Sell
         </button>
         <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%'>
@@ -15,7 +15,7 @@
         </button>
       </div>
 
-      <div class='d-flex mb-3 justify-content-between mt-3'>
+      <div class='d-flex justify-content-between mt-3'>
         <div>
           <div class='d-flex align-items-baseline'>
             <p class='h4 fw-semibold'><%= @event.title %></p>
@@ -26,9 +26,9 @@
         </div>
       </div>
 
-        <p class='h6 fw-semibold'>Location: <%= @event.location %></p>
         <p class='fw-semibold'>Host: <%= @event.user.name %></p>
-        <p>Description: <%= @event.description %></p>
+        <p class='h6 fw-semibold'>Location: <%= @event.location %></p>
+        <p><%= @event.description %></p>
 
         <%= link_to 'Back to events', events_path, class: 'btn btn-sm btn-outline-primary rounded mb-4' %>
     </div>
@@ -62,7 +62,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="buyTicketModalLabel">Sell Ticket</h5>
+          <h5 class="modal-title" id="buyTicketModalLabel">Buy Ticket</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
