--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,10 +41,10 @@
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My events", my_events_path, class: "dropdown-item" %>
-              <%= link_to "My tickets", tickets_path, class: "dropdown-item" %>
-              <%= link_to "My orders", orders_path, class: "dropdown-item" %>
-              <%= link_to "My profile", user_path(current_user), class: "dropdown-item" %>
+              <%= link_to "Events", my_events_path, class: "dropdown-item" %>
+              <%= link_to "Tickets", tickets_path, class: "dropdown-item" %>
+              <%= link_to "Orders", orders_path, class: "dropdown-item" %>
+              <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </div>
           </li>
