--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,17 +1,14 @@
 <div class="bg-white rounded p-4 shadow-sm">
-  <h1>Sell Tickets</h1>
-
-  <hr>
-  event: <%= @event.title %>
+    <h6><strong><%= @event.title %></strong></h6>
   <hr>
 
   <%= simple_form_for([@event, @ticket]) do |form| %>
     <div class="form-group">
-      <%= form.input 'normal_ticket_quantity', label: 'Inteira - Quantidade', as: :integer, input_html: { min: 0, step: 1, value: 0 }, required: false %>
+      <%= form.input 'normal_ticket_quantity', label: 'inteira - quantidade', as: :integer, input_html: { min: 0, step: 1, value: 0 }, required: false %>
     </div>
 
     <div class="form-group">
-      <%= form.input 'half_price_quantity', label: 'Meia - Quantidade', as: :integer, input_html: { min: 0, step: 1, value: 0 }, required: false %>
+      <%= form.input 'half_price_quantity', label: 'meia - quantidade', as: :integer, input_html: { min: 0, step: 1, value: 0 }, required: false %>
     </div>
 
     <%= form.hidden_field :event_id, value: @event.id %>
