--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,6 +22,11 @@
   margin-top: 10px;
 }
 
+.card-content li {
+  font-size: 12px;
+  opacity: 0.7;
+}
+
 .event-link {
   text-decoration: none;
   color: inherit;
