--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -16,11 +16,14 @@
   position: relative;
 }
 
-.cut-left {
+.cut-left, .cut-right {
   position: absolute;
   width: 30px;
   height: 60px;
   background: #f4f4f4;
+}
+
+.cut-left {
   border-top-right-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 0 0 0 rgba(0,0,0,0.2),
@@ -28,16 +31,37 @@
 }
 
 .cut-right {
-  position: absolute;
   right: 0;
-  flex-grow: 1;
-  width: 30px;
-  height: 60px;
-  background: #f4f4f4;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
   box-shadow: 0 0 0 rgba(0,0,0,0.2),
   inset 5px 2px 6px rgba(0,0,0,0.2);
+}
+
+.selling {
+  position: absolute;
+  top: 55px;
+  right: 50px;
+  border: 2px solid rgba(255,0,0,0.7);
+  color: rgba(255,0,0,0.7);
+  background: transparent;
+  border-radius: 5px;
+  padding: 8px 16px;
+  font-size: 28px;
+  cursor: pointer;
+  transform: rotate(-30deg); /* Rotate button by 30 degrees */
+  z-index: 1; /* Ensure it is above other content */
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
+}
+
+.sell {
+  border: none;
+  color: rgba(0,0,255,0.7);
+  background: transparent;
+  padding: 0 0;
+  font-size: 10px;
+  cursor: pointer;
+  transition: all 0.3s ease; /* Smooth transition for hover effects */
 }
 
 .card-ticket img {
