--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,12 +7,17 @@
       <% end %>
 
       <div class="d-flex my-3 justify-content-between">
-        <button type="button" class="btn btn-primary rounded me-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
-          Sell
-        </button>
-        <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%' <%= @tickets_by_type.values.sum == 0 ? 'disabled' : '' %>>
-          Buy
-        </button>
+        <% if current_user %>
+          <button type="button" class="btn btn-primary rounded me-1" data-bs-toggle="modal" data-bs-target="#sellTicketModal" style='width:100%'>
+            Sell
+          </button>
+          <button type="button" class="btn btn-primary rounded ms-1" data-bs-toggle="modal" data-bs-target="#buyTicketModal" style='width:100%' <%= @tickets_by_type.values.sum == 0 ? 'disabled' : '' %>>
+            Buy
+          </button>
+        <% else %>
+          <%= link_to 'Sell', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+          <%= link_to 'Buy', new_user_session_path, class: 'btn btn-primary rounded ms-1', style: 'width: 100%' %>
+        <% end %>
       </div>
 
       <div class='d-flex justify-content-between mt-3'>
