tickets ordered by date

--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -55,6 +55,9 @@
 }
 
 .sell {
+  position: absolute;
+  top: 140px;
+  right: 146px;
   border: none;
   color: rgba(0,0,255,0.7);
   background: transparent;
