logo and avatar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,7 @@
   <div class="container-fluid">
 
   <%= link_to events_path, class: "navbar-brand" do %>
-      <%# Imagem meramente ilustrativa. Trocar por logo depois %>
-      <%= image_tag "https://static.vecteezy.com/system/resources/thumbnails/015/117/358/small_2x/ticket-icon-in-grey-colors-voucher-signs-illustration-png.png" %>
+      <%= image_tag "logo.svg" %>
     <% end %>
 
 
@@ -36,8 +35,7 @@
             <% if current_user.photo.attached? %>
               <%= cl_image_tag current_user.photo.key, width: 40, height: 40, crop: :thumb, gravity: :face, class: "avatar", alt: "dropdown menu" %>
             <% else %>
-              <%# image_tag "avatar.png", class: "avatar", alt: "dropdown menu"  %>
-              ''
+              <%= image_tag "avatar.png", class: "avatar", alt: "dropdown menu"  %>
             <% end %>
           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
