--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -3,6 +3,7 @@
 
   <% if @orders.present? %>
     <% @orders.each do |event, orders| %>
+    <div class="grid-item">
       <div class='card-content'>
         <h2><%= event.title %></h2>
         <p><%= event.location %></p>
@@ -17,13 +18,14 @@
           <% end %>
         </ol>
       </div>
+    </div>
 
     <% end %>
 
-    <h2>Total Price: <%= number_to_currency(@total_price) %></h2>
+    <h3>Total Price: <%= humanized_money_with_symbol(@total_price) %></h3>
 
     <%= form_with url: create_checkout_session_path, data: { turbo_method: :post, turbo: false }, local: true do %>
-      <%= submit_tag 'Checkout', class: 'btn btn-primary' %>
+      <%= submit_tag 'Checkout', class: 'btn btn-primary mt-3' %>
     <% end %>
 
   <% else %>
