--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
   <div class="row mt-3">
     <div class='col-sm-12 col-lg-7'>
-      <% if @event.photo.present? %>
-        <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url('<%= cl_image_path @event.photo.key, height: 300, crop: :fill %>')">
-        </div>
-      <% end %>
+      <div style="width: 100%; height: 300px;"
+        data-controller="map"
+        data-map-markers-value="<%= @marker.to_json %>"
+        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
 
       <div class="d-flex my-3 justify-content-between">
         <% if current_user %>
@@ -39,11 +40,9 @@
     </div>
 
     <div class='col-sm-12 col-lg-5'>
-      <div style="width: 100%; height: 700px;"
-        data-controller="map"
-        data-map-markers-value="<%= @marker.to_json %>"
-        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-      </div>
+      <% if @event.photo.present? %>
+        <%= cl_image_tag(@event.photo.key, widht: '100%', crop: :fill, class: 'img-fluid') %>
+      <% end %>
     </div>
   </div>
 
