--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container" data-controller="selling-button">
   <h1 class='mb-3'>Tickets</h1>
 
-  <div class="tickets-container">
+  <div class="tickets-container pb-4">
     <% if @tickets.present? %>
       <%= render @tickets %>
     <% else %>
