--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,8 @@
-<h2>Sign up</h2>
+<div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-md-8 col-lg-6 mx-auto">
+      <div class="bg-white rounded p-4 shadow-sm">
+        <h2 class="mb-4 text-center">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -17,9 +21,9 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <div class="form-actions text-center">
+      <%= f.button :submit, "Sign up", class: 'my_events btn-dark' %>
+    </div>
   </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+<% end %>
