--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,7 +16,7 @@
       <%= f.input :photo, label: false, as: :file, input_html: { class: 'form-control-file' } %>
     </div>
     <div class="form-group text-center">
-      <%= f.button :submit, "Update Event", class: 'btn btn-primary' %>
+      <%= f.button :submit, "Create Event", class: 'btn btn-primary' %>
     </div>
   <% end %>
 </div>
