--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
             class: "search form-control",
             placeholder: "Type something..."
         %>
-      <%= submit_tag "Search", name: "", class: "search-btn btn btn-success" %>
+      <%= submit_tag "Search", name: "", class: "search-btn btn btn-primary" %>
       <% end %>
     </div>
     </div>
