--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -59,7 +59,7 @@
   top: 140px;
   right: 146px;
   border: none;
-  color: rgba(0,0,255,0.7);
+  color: #ff6600;
   background: transparent;
   padding: 0 0;
   font-size: 10px;
