--- a/app/views/events/my_events.html.erb
+++ b/app/views/events/my_events.html.erb
@@ -1,35 +1,37 @@
-<div class="d-flex justify-content-between mb-4">
-  <div>
-    <h1>My Events</h1>
-  </div>
-  <div>
-    <%= link_to 'Add new event', new_event_path, class: 'my_events-btn btn-success rounded' %>
-  </div>
-</div>
-
-<% if @my_events.any? %>
-  <div class="scrollable-container mt-3">
-    <div class="grid" data-controller='masonry'>
-      <% @my_events.each do |event| %>
-        <div class="grid-item d-none" data-masonry-target='item'>
-          <% if event.photo.present? && event.photo.key.present? %>
-            <%= cl_image_tag(event.photo.key, crop: :fill, data: { masonry_target: :image }) %>
-          <% end %>
-          <div class="card-content">
-            <h2><%= event.title %></h2>
-            <p><%= event.location %></p>
-            <p><strong><%= event.date.strftime("%d-%m-%Y") %></strong></p>
-            <%= link_to "Edit event", edit_event_path(event), class: 'btn btn-sm btn-outline-warning rounded' %>
-            <%= link_to "Remove event", event_path(event), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger rounded' %>
-          </div>
-        </div>
-      <% end %>
+<div class="container">
+  <div class="d-flex justify-content-between mb-4">
+    <div>
+      <h1>My Events</h1>
+    </div>
+    <div>
+      <%= link_to 'Add new event', new_event_path, class: 'btn btn-primary' %>
     </div>
   </div>
-<% else %>
-  <p>No events found</p>
-<% end %>
 
-<div class="text-center mt-4">
-  <%= link_to 'All events', events_path, class: 'my_events-btn btn-outline-primary rounded' %>
+  <% if @my_events.any? %>
+    <div class="scrollable-container mt-3">
+      <div class="grid" data-controller='masonry'>
+        <% @my_events.each do |event| %>
+          <div class="grid-item d-none" data-masonry-target='item'>
+            <% if event.photo.present? && event.photo.key.present? %>
+              <%= cl_image_tag(event.photo.key, crop: :fill, data: { masonry_target: :image }) %>
+            <% end %>
+            <div class="card-content">
+              <h2><%= event.title %></h2>
+              <p><%= event.location %></p>
+              <p><strong><%= event.date.strftime("%d-%m-%Y") %></strong></p>
+              <%= link_to "Edit event", edit_event_path(event), class: 'btn btn-sm btn-outline-warning rounded' %>
+              <%= link_to "Remove event", event_path(event), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'btn btn-sm btn-outline-danger rounded' %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  <% else %>
+    <p>No events found</p>
+  <% end %>
+
+  <div class="text-center mt-4">
+    <%= link_to 'All events', events_path, class: 'btn btn-outline-primary' %>
+  </div>
 </div>
